src/components/Home/styles/Home.scss
@import '../../Character/styles/CharacterSearch';
@import '../../Streams/styles/_StreamList';
@import '../../News/styles/_NewsList';
@import '../../Market/styles/Market';

@import 'homeClassLinks';
@import 'homeNewsList';
@import 'homeCharacter';

.home {
    display: flex;
    flex-direction: column;
    padding: 0 1rem;
    flex: 1;
    margin-bottom: -20rem;
    overflow: hidden;

    .home-bottom {
        flex: 1;
        background: rgba(0, 0, 0, 0.8);
        margin: 0 -1rem;
        padding-bottom: 20rem;
    }

    .home-top {
        position: relative;
        display: flex;
        flex-direction: column;
        justify-content: center;

        .dummy-container {
            height: 20rem;
        }

        .character-search {
            margin: 5rem auto;
        }

        .home-ad-container {
            width: 468px;
            max-width: 100%;
            height: 7rem;
            margin: 2rem auto;
        }
    }

    h3 {
        color: dodgerblue;
    }

    .home-market {
        margin-top: 2rem;

        h3 {
            margin: 0.5rem;

            & > span {
                vertical-align: text-bottom;
                margin-left: 1rem;
            }
        }
    }

    .more {
        margin: 0 1rem;
    }

    .stream-menu-container {
        margin-top: 3rem;
    }

    .home-stream {
        padding: 0 0.5rem;
        padding-bottom: 5rem;
        display: flex;
        flex-direction: column;

        h4 {
            padding: 0 1rem;
        }

        .stream-list {
            .stream-item {
                width: 50%;

                @media (max-width: 767px) {
                    width: 100%;
                }
            }

            &:after {
                display: none;
            }
        }
    }

    .slim-container > .adBlock {
        padding: 0 2rem;
    }

    .side-menu {
        h3 {
            margin-bottom: 1.2rem;
        }

        .adBlock {
            margin: 3rem 0;
        }

        .side-button {
            width: 100%;
            padding: 0.5rem;
            font-size: 2rem;
            margin-bottom: 2rem;
            height: auto;
            border-radius: 0.1rem;
            filter: brightness(85%);

            img {
                height: 5rem;
                vertical-align: middle;
            }

            span {
                vertical-align: middle;
            }

            &.discord {
                background: royalblue;
                border: none;
                display: flex;
                justify-content: flex-start;
                align-items: center;

                img {
                    margin-right: 1rem;
                }

                &.raid {
                    background: blueviolet;
                }
            }

            &:hover {
                filter: brightness(100%);
            }
        }
    }
}

